--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="lib/angular.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/oop_basic/service/AngularOOPService.js"></script>
+    <script src="js/oop_basic/service/AngularOOPInstanceService.js"></script>
     <script src="js/oop_basic/controller/AngularOOPController.js"></script>
   </body>
 </html>
