service oop init

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   </head>
   <body ng-controller="AngularOOPController">
 
+    {{weapon}}
+    <p>
+    {{bullet}}
     <script src="lib/angular.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/oop_basic/service/AngularOOPService.js"></script>
